feat(blog): managers mistakes

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,6 +22,9 @@ layout: default
             {{ post.title | escape }}
           </a>
         </h3>
+        <p>
+          {{ post.description | escape }}
+        </p>
         {%- if site.show_excerpts -%}
           {{ post.excerpt }}
         {%- endif -%}
