--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,12 @@
 
   {% feed_meta %}
 
+  {% if jekyll.environment == 'production' and site.google_analytics -%}
+  <!-- Begin Google Analytics -->
+  {% include google-analytics.html %}
+  <!-- End Google Analytics -->
+  {%- endif %}
+
   <!-- Begin highlight.js support -->
   <link rel="stylesheet" href="/js/highlightjs/styles/github.css">
   <link rel="stylesheet" href="/js/highlightjs/styles/ssms.css" />
